--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         .telegram-bg { background-color: #229ED9; }
         .post-content { white-space: pre-wrap; line-height: 1.7; word-break: break-word; }
         
-        /* Vertical Gallery Below Text */
-        .gallery-vertical { display: flex; flex-direction: column; gap: 15px; margin-top: 15px; }
-        .gallery-vertical img { width: 100%; border-radius: 16px; object-fit: contain; background: #000; border: 1px solid #ddd; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1); }
+        /* Gallery Stacking Below Text */
+        .gallery-vertical { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
+        .gallery-vertical img { width: 100%; border-radius: 12px; object-fit: contain; background: #000; border: 1px solid #eee; }
 
-        .marquee-container { background: #FFD700; color: #37006a; padding: 7px 0; font-weight: bold; overflow: hidden; border-bottom: 2px solid #D4AF37; position: sticky; top: 0; z-index: 10; }
+        .marquee-container { background: #FFD700; color: #37006a; padding: 7px 0; font-weight: bold; overflow: hidden; border-bottom: 2px solid #D4AF37; }
         .marquee-text { display: inline-block; white-space: nowrap; animation: marquee 30s linear infinite; padding-left: 100%; }
         @keyframes marquee { 0% { transform: translate(0, 0); } 100% { transform: translate(-100%, 0); } }
 
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-    <div id="marqueeBar" class="marquee-container hidden"><div id="ticker" class="marquee-text text-[11px] uppercase tracking-wider"></div></div>
+    <div id="marqueeBar" class="marquee-container hidden"><div id="ticker" class="marquee-text text-[11px] uppercase"></div></div>
 
     <header class="purple-gradient text-white shadow-lg rounded-b-[20px] border-b-2 border-[#D4AF37] relative z-0">
         <div class="bg-black/20 px-4 py-1 flex justify-between items-center text-[9px] font-mono text-[#FFD700]">
@@ -85,9 +85,9 @@
 
         <section id="contactPage" class="page space-y-4">
             <div class="bg-white p-5 rounded-2xl shadow-md border-l-4 border-[#D4AF37] mb-2 relative overflow-hidden text-center slide-up">
-                <h3 class="font-bold text-[#4B0082] text-sm mb-1">လုပ်ငန်းရှင်များအတွက်</h3>
+                <h3 class="font-bold text-[#4B0082] text-sm mb-1 uppercase tracking-tighter">Register Business</h3>
                 <p class="text-[10px] text-gray-600 mb-3">မိမိတို့ လုပ်ငန်းကို Cherry Directory တွင် ထည့်သွင်းလိုပါက Form ဖြည့်စွက်ပေးပါ။</p>
-                <a id="regBtn" target="_blank" class="inline-block gold-gradient text-white text-[10px] font-bold px-5 py-2 rounded-xl shadow active:scale-95 transition">စာရင်းသွင်းရန်</a>
+                <a id="regBtn" target="_blank" class="inline-block gold-gradient text-white text-[10px] font-bold px-6 py-2 rounded-xl shadow active:scale-95 transition">JOIN NOW</a>
             </div>
             <div id="adminProfileArea"></div>
             <div id="adminNotesArea" class="space-y-3"></div>
@@ -96,7 +96,7 @@
         <section id="detailPage" class="fixed inset-0 bg-[#f8f5ff] z-[100] overflow-y-auto hidden">
             <div class="sticky top-0 bg-white/95 backdrop-blur-md p-3 shadow-sm z-50 flex items-center border-b border-gray-200">
                 <button onclick="closeDetail()" class="w-9 h-9 rounded-full bg-gray-100 text-[#4B0082] flex items-center justify-center hover:bg-[#D4AF37] transition-all"><i class="fa fa-arrow-left"></i></button>
-                <span class="ml-3 font-bold text-[#4B0082] truncate text-xs" id="detailHeader">Details</span>
+                <span class="ml-3 font-bold text-[#4B0082] truncate text-xs uppercase" id="detailHeader">Details</span>
             </div>
             <div id="detailContent" class="p-5 max-w-2xl mx-auto pb-24"></div>
         </section>
@@ -112,7 +112,6 @@
         if ('serviceWorker' in navigator) { window.addEventListener('load', () => { navigator.serviceWorker.register('./sw.js'); }); }
 
         const SHEET_ID = '1rMGmfDW5AsBZGJJw5H8HyavOQiIuMr-pPvXpShktYxQ';
-        const GIDS = { home: '0', dir: '1267218282', contact: '626044868' };
         const BASE_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json`;
 
         let eventsData = [], dirData = [], adminData = [];
@@ -152,12 +151,12 @@
 
         async function fetchEvents() {
             try {
-                const res = await fetch(`${BASE_URL}&gid=${GIDS.home}`);
-                const t = await res.text();
-                const j = JSON.parse(t.substr(47).slice(0, -2));
+                const res = await fetch(`${BASE_URL}&gid=0`);
+                const t = await res.text(); const j = JSON.parse(t.substr(47).slice(0, -2));
                 eventsData = j.table.rows.map((r,idx) => ({ 
-                    id: idx, cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, from: r.c[3]?.v, to: r.c[4]?.v, 
-                    time: r.c[5]?.v, place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, 
+                    uid: 'ev-'+idx, cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, 
+                    from: r.c[3]?.v, to: r.c[4]?.v, time: r.c[5]?.v, place: r.c[6]?.v, 
+                    org: r.c[7]?.v, logo: r.c[8]?.v, 
                     imgs: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean) 
                 })).filter(i => i.title && i.title !== "Title").reverse();
                 localStorage.setItem('c_events', JSON.stringify(eventsData));
@@ -167,11 +166,10 @@
 
         async function fetchDirectory() {
             try {
-                const res = await fetch(`${BASE_URL}&gid=${GIDS.dir}`);
-                const t = await res.text();
-                const j = JSON.parse(t.substr(47).slice(0, -2));
+                const res = await fetch(`${BASE_URL}&gid=1267218282`);
+                const t = await res.text(); const j = JSON.parse(t.substr(47).slice(0, -2));
                 dirData = j.table.rows.map((r,idx) => ({ 
-                    id: idx, name: r.c[0]?.v, cat: r.c[1]?.v, type: r.c[2]?.v, desc: r.c[3]?.v, addr: r.c[4]?.v, 
+                    uid: 'dir-'+idx, name: r.c[0]?.v, cat: r.c[1]?.v, type: r.c[2]?.v, desc: r.c[3]?.v, addr: r.c[4]?.v, 
                     ward: r.c[5]?.v, city: r.c[6]?.v, ph1: r.c[7]?.v, ph2: r.c[8]?.v, viber: r.c[10]?.v, tg: r.c[11]?.v, 
                     email: r.c[12]?.v, logo: r.c[13]?.v, rating: r.c[14]?.v, note: r.c[15]?.v, 
                     imgs: [r.c[14]?.v, r.c[15]?.v, r.c[16]?.v, r.c[17]?.v, r.c[18]?.v].filter(Boolean)
@@ -183,9 +181,8 @@
 
         async function fetchAdmin() {
             try {
-                const res = await fetch(`${BASE_URL}&gid=${GIDS.contact}`);
-                const t = await res.text();
-                const j = JSON.parse(t.substr(47).slice(0, -2));
+                const res = await fetch(`${BASE_URL}&gid=626044868`);
+                const t = await res.text(); const j = JSON.parse(t.substr(47).slice(0, -2));
                 adminData = j.table.rows; localStorage.setItem('c_admin', JSON.stringify(adminData));
                 renderAdminArea(adminData);
             } catch (e) {}
@@ -194,15 +191,15 @@
         function renderAdminArea(rows) {
             const p = rows.find(r => r.c[0]?.v && r.c[0].v !== "Description");
             if (p) {
-                document.getElementById('adminProfileArea').innerHTML = `<div class="bg-white p-5 rounded-2xl shadow-sm border-t-4 border-[#4B0082] mb-6 slide-up"><h3 class="font-bold text-center text-sm text-[#4B0082] mb-4 uppercase tracking-tighter">Admin Support</h3><div class="space-y-3">
+                document.getElementById('adminProfileArea').innerHTML = `<div class="bg-white p-5 rounded-2xl shadow-sm border-t-4 border-[#4B0082] mb-6 slide-up"><h3 class="font-bold text-center text-xs text-[#4B0082] mb-4 uppercase tracking-tighter">Admin Support</h3><div class="space-y-3">
                     ${renderAdminBtn('Phone', p.c[1]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
                     ${renderAdminBtn('Viber', p.c[3]?.v, 'viber://chat?number=', 'fa-viber', 'viber-bg', true)}
                     ${renderAdminBtn('Telegram', p.c[4]?.v, 'https://t.me/', 'fa-telegram', 'telegram-bg', true)}
                 </div></div>`;
             }
             const n = rows.slice(1).map(r => r.c[6]?.v).filter(Boolean);
-            if(n.length > 0) { document.getElementById('marqueeBar').classList.remove('hidden'); document.getElementById('ticker').innerText = "📢 " + n.join(" | 📢 "); }
-            document.getElementById('adminNotesArea').innerHTML = n.map(note => `<div class="bg-yellow-400 border-l-4 border-[#B8860B] p-4 rounded-r-xl shadow-sm slide-up mb-3"><p class="text-xs text-[#37006a] font-bold post-content uppercase">${note}</p></div>`).join('');
+            if(n.length > 0) { document.getElementById('marqueeBar').classList.remove('hidden'); document.getElementById('ticker').innerText = "🚨 " + n.join(" | 🚨 "); }
+            document.getElementById('adminNotesArea').innerHTML = n.map(note => `<div class="bg-yellow-400 border-l-4 border-[#B8860B] p-4 rounded-r-xl shadow-sm slide-up mb-3"><p class="text-xs text-[#37006a] font-bold post-content">${note}</p></div>`).join('');
         }
 
         function renderAdminBtn(l, v, p, i, c, isF=false) {
@@ -225,7 +222,7 @@
         function renderEvents() {
             const l = document.getElementById('announcementList');
             let d = activeEventCat === 'All' ? eventsData : eventsData.filter(e => e.cat === activeEventCat);
-            l.innerHTML = d.map(i => `<div onclick="openDetail('event', ${i.id})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 slide-up border border-gray-50"><img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover bg-gray-50 border" onerror="this.src='CDST_Logo.png'"><div class="flex-1 overflow-hidden"><h4 class="font-bold text-[#4B0082] text-xs leading-tight mb-1 line-clamp-1">${i.title}</h4><p class="text-[9px] text-gray-500 line-clamp-2">${i.desc || ''}</p></div></div>`).join('');
+            l.innerHTML = d.map(i => `<div onclick="openDetail('event', '${i.uid}')" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 slide-up border border-gray-50"><img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover bg-gray-50 border shadow-sm" onerror="this.src='CDST_Logo.png'"><div class="flex-1 overflow-hidden"><h4 class="font-bold text-[#4B0082] text-xs leading-tight mb-1 line-clamp-1">${i.title}</h4><p class="text-[9px] text-gray-500 line-clamp-2">${i.desc || ''}</p></div></div>`).join('');
         }
 
         function renderDirectory() {
@@ -233,23 +230,23 @@
             const t = document.getElementById('searchInput').value.toLowerCase();
             let filtered = dirData.filter(i => (activeDirCat === 'All' || i[groupByKey] === activeDirCat) && (i.name.toLowerCase().includes(t) || (i.ward && i.ward.toLowerCase().includes(t))));
             const groups = filtered.reduce((a, i) => { a[i[groupByKey]] = a[i[groupByKey]] || []; a[i[groupByKey]].push(i); return a; }, {});
-            l.innerHTML = Object.keys(groups).map(g => `<div class="mb-5"><h3 class="font-bold text-[#4B0082] text-[9px] bg-purple-100/50 px-3 py-1 rounded-md inline-block mb-3 uppercase tracking-wider">${g}</h3><div class="grid grid-cols-2 gap-3">${groups[g].map(i => `
-                <div onclick="openDetail('dir', ${i.id})" class="bg-white rounded-2xl p-4 shadow-sm border border-gray-100 flex flex-col items-center text-center cursor-pointer active:scale-95 slide-up"><img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover bg-gray-50 mb-3 shadow-sm border border-gray-200" onerror="this.src='CDST_Logo.png'"><h4 class="font-bold text-[#4B0082] text-[10px] leading-tight mb-1.5 line-clamp-2 h-7 w-full">${i.name}</h4><div class="mb-2">${getStars(i.rating)}</div><div class="flex items-center text-[8px] text-[#D4AF37] font-bold"><i class="fa fa-map-pin mr-1"></i> ${i.ward || '-'}</div></div>`).join('')}</div></div>`).join('');
+            l.innerHTML = Object.keys(groups).map(g => `<div class="mb-5"><h3 class="font-bold text-[#4B0082] text-[8px] bg-purple-100/50 px-2 py-1 rounded-md inline-block mb-3 uppercase tracking-widest">${g}</h3><div class="grid grid-cols-2 gap-3">${groups[g].map(i => `
+                <div onclick="openDetail('dir', '${i.uid}')" class="bg-white rounded-2xl p-3 shadow-sm border border-gray-100 flex flex-col items-center text-center cursor-pointer active:scale-95 slide-up"><img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover bg-white mb-3 shadow-sm border" onerror="this.src='CDST_Logo.png'"><h4 class="font-bold text-[#4B0082] text-[10px] leading-tight mb-1.5 line-clamp-2 h-7 w-full uppercase">${i.name}</h4><div class="mb-2">${getStars(i.rating)}</div><div class="flex items-center text-[7px] text-[#D4AF37] font-bold"><i class="fa fa-map-pin mr-1"></i> ${i.ward || '-'}</div></div>`).join('')}</div></div>`).join('');
         }
 
         function handleSearch() { renderDirectory(); }
 
-        function openDetail(type, originalId) {
+        function openDetail(type, uid) {
             const modal = document.getElementById('detailPage'); const content = document.getElementById('detailContent');
             const rR = (l, v) => `<div class="border-b border-gray-50 py-3"><p class="text-[9px] text-gray-400 mb-0.5 uppercase font-bold tracking-widest">${l}</p><div class="text-gray-800 font-medium text-xs post-content">${v || '-'}</div></div>`;
-            const rP = (l, v) => v ? `<div class="border-b border-gray-50 py-2.5 flex justify-between items-center"><div><p class="text-[9px] text-gray-400 font-bold uppercase">${l}</p><p class="text-[#4B0082] font-bold text-xs font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[9px] font-bold shadow-sm active:scale-90"><i class="fa fa-phone"></i></a></div>` : '';
-            const rC = (l, v, i, c, lp) => v ? `<div class="border-b border-gray-50 py-2.5 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[9px] text-gray-400 font-bold uppercase">${l}</p><p class="text-xs font-bold text-gray-700">${v}</p></div></div><a href="${lp}${v}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[9px] font-bold shadow-sm active:scale-90">CHAT</a></div>` : '';
+            const rP = (l, v) => v ? `<div class="border-b border-gray-50 py-2.5 flex justify-between items-center"><div><p class="text-[9px] text-gray-400 font-bold uppercase">${l}</p><p class="text-[#4B0082] font-bold text-xs font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white w-8 h-8 rounded-lg flex items-center justify-center shadow active:scale-90"><i class="fa fa-phone"></i></a></div>` : '';
+            const rC = (l, v, i, c, lp) => v ? `<div class="border-b border-gray-50 py-2.5 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[9px] text-gray-400 font-bold uppercase">${l}</p><p class="text-xs font-bold text-gray-700">${v}</p></div></div><a href="${lp}${v}" target="_blank" class="${c} text-white px-3 py-1.5 rounded-lg text-[9px] font-bold shadow active:scale-90">CHAT</a></div>` : '';
 
             if(type === 'event') {
-                const i = eventsData.find(x => x.id === originalId); document.getElementById('detailHeader').innerText = "Event Details";
-                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4"><img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover border" onerror="this.src='CDST_Logo.png'"><div class="flex-1"><h2 class="text-sm font-bold text-[#4B0082] leading-tight">${i.title}</h2><span class="text-[8px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full mt-1 inline-block uppercase">${i.cat}</span></div></div><div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-[10px] uppercase tracking-widest">Description</h3>${rR('Desc', i.desc)}${rR('Org', i.org)}${rR('Place', i.place)}${rR('Date', i.from + ' - ' + i.to)}</div><div class="gallery-vertical">${i.imgs.map(img => `<img src="${fixDriveLink(img)}">`).join('')}</div></div>`;
+                const i = eventsData.find(x => x.uid === uid); document.getElementById('detailHeader').innerText = "Event Details";
+                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4"><img src="${fixDriveLink(i.logo)}" class="w-14 h-14 rounded-xl object-cover border shadow-sm" onerror="this.src='CDST_Logo.png'"><div class="flex-1"><h2 class="text-sm font-bold text-[#4B0082] leading-tight">${i.title}</h2><span class="text-[8px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full mt-1 inline-block uppercase">${i.cat}</span></div></div><div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-[10px] uppercase">Information</h3>${rR('Description', i.desc)}${rR('Organizer', i.org)}${rR('Location', i.place)}${rR('Date', i.from + ' to ' + i.to)}</div><div class="gallery-vertical">${i.imgs.map(img => `<img src="${fixDriveLink(img)}">`).join('')}</div></div>`;
             } else {
-                const i = dirData.find(x => x.id === originalId); document.getElementById('detailHeader').innerText = i.name;
+                const i = dirData.find(x => x.uid === uid); document.getElementById('detailHeader').innerText = i.name;
                 content.innerHTML = `<div class="space-y-4 slide-up">
                     <div class="bg-white rounded-3xl p-6 shadow-sm border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.logo)}" class="w-20 h-20 rounded-2xl object-cover mx-auto mb-3 border shadow-sm" onerror="this.src='CDST_Logo.png'"><h2 class="text-sm font-bold text-[#4B0082] uppercase">${i.name}</h2><div class="flex justify-center mt-2 mb-4 scale-125">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="text-[9px] bg-gray-100 text-gray-500 px-4 py-2 rounded-full font-bold">Write Review</a></div>
                     <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-1 mb-2 text-[10px] uppercase tracking-widest">Basic Info</h3>${rR('Description', i.desc)}${rR('Category', i.cat)}${rR('Type', i.type)}${rR('Ward', i.ward)}${rR('Address', i.addr)}</div>
